# chess-engine

./: .gitmodules  Cargo.toml  Makefile  \  build.sh  engines.json  features  tournament.bash  uci-protocol.html
chess_engine/src/: app.rs  attack_tables.rs  bitboard.rs  board.rs  direction.rs  evaluation.rs  piece.rs
ga/: main.typ
gymnasiearbete/: _region_.tex  main.fdb_latexmk  main.fls  main.tex
gymnasiearbete/.auctex-auto/: main.el
src/: app.rs  attack_tables.rs  bench.rs  bitboard.rs  board.rs  direction.rs  evaluation.rs  lib.rs  magic_numbers.rs  main.rs  move.rs  move_generation.rs  move_ordering.rs  perft.rs  piece.rs  piece_move.rs  piece_square_tables.rs  search.rs  tables.rs  transposition_table.rs  uci.rs  zobrist_hash.rs
src/board/: bitboard.rs  board.rs  direction.rs  mod.rs  piece.rs  piece_move.rs  utils.rs  zobrist_hash.rs
src/evaluation/: book_moves.rs  evaluation.rs  mod.rs  piece_square_tables.rs
src/move_generation/: attack_tables.rs  attack_tables.rs.bak  mod.rs  move_generation.rs
src/search/: book_moves.rs  mod.rs  move_ordering.rs  search.rs  transposition_table.rs
