[package]
name = "chess_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
once_cell = "1.17.0"
rand = "0.8.5"
bitflags = "2.5.0"
arrayvec = "0.7.4"

[profile.release]
lto = "fat"
opt-level = 3
