[package]
name = "chess_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "1", features = ["full"] }
rand = "0.8.5"
bitflags = "2.5.0"
arrayvec = "0.7.4"
num_enum = "0.7.3"
image = "0.25.4"
imageproc = "0.25.0"
rusttype = "0.9.3"
ab_glyph = "0.2.29"

[profile.release]
#debug = true
lto = "fat"
opt-level = 3
